# sonic-sairedis

./: .gitignore  Makefile.am  README.md  autoclean.sh  azsyslog.conf  azure-pipelines.yml  configure.ac  lgtm.yml
lib/: Channel.cpp  Channel.h  ClientConfig.cpp  ClientSai.cpp  ClientSai.h  ClientServerSai.cpp  ClientServerSai.h  ContextConfig.cpp  ContextConfig.h  ContextConfigContainer.h  Makefile.am  Recorder.cpp  Recorder.h  RedisChannel.cpp  RedisRemoteSaiInterface.cpp  RedisRemoteSaiInterface.h  Sai.cpp  Sai.h  ServerConfig.cpp  ServerConfig.h  ServerSai.cpp  ServerSai.h  Switch.cpp  SwitchConfig.cpp  SwitchConfigContainer.cpp  SwitchContainer.h  Utils.cpp  Utils.h  VirtualObjectIdManager.cpp  VirtualObjectIdManager.h  ZeroMQChannel.cpp  ZeroMQChannel.h  client_config.json  context_config.json  sai_redis.h  sai_redis_bfd.cpp  sai_redis_bmtor.cpp  sai_redis_debug_counter.cpp  sai_redis_fdb.cpp  sai_redis_genericprogrammable.cpp  (+20 more)
lib/inc/: Channel.h  ClientConfig.h  ClientSai.h  ClientServerSai.h  Context.h  ContextConfig.h  ContextConfigContainer.h  Globals.h  Notification.h  NotificationFdbEvent.h  NotificationPortStateChange.h  NotificationQueuePfcDeadlock.h  NotificationSwitchShutdownRequest.h  NotificationSwitchStateChange.h  OidIndexGenerator.h  Recorder.h  RedisChannel.h  RedisRemoteSaiInterface.h  RedisVidIndexGenerator.h  RemoteSaiInterface.h  Sai.h  SaiInterface.h  SaiInternal.h  ServerSai.h  Switch.h  SwitchConfig.h  SwitchConfigContainer.h  SwitchContainer.h  Utils.h  VirtualObjectIdManager.h  WrapperRemoteSaiInterface.h  ZeroMQChannel.h  sai_redis.h  sai_redis_internal.h  sairedis.h  sairediscommon.h
lib/src/: Channel.cpp  ClientSai.cpp  ClientServerSai.cpp  Context.cpp  ContextConfig.cpp  ContextConfigContainer.cpp  Globals.cpp  Makefile.am  NotificationFactory.cpp  NotificationFdbEvent.cpp  NotificationPortStateChange.cpp  NotificationQueuePfcDeadlock.cpp  NotificationSwitchShutdownRequest.cpp  NotificationSwitchStateChange.cpp  PerformanceIntervalTimer.cpp  Recorder.cpp  RedisChannel.cpp  RedisRemoteInterface.cpp  RedisRemoteSaiInterface.cpp  RedisVidIndexGenerator.cpp  Sai.cpp  SaiInterface.cpp  ServerConfig.cpp  ServerSai.cpp  SkipRecordAttrContainer.cpp  Switch.cpp  SwitchConfig.cpp  SwitchConfigContainer.cpp  SwitchContainer.cpp  VirtualObjectIdManager.cpp  WrapperRemoteSaiInterface.cpp  ZeroMQChannel.cpp  context_config.json  sai_redis_counter.cpp  sai_redis_fdb.cpp  sai_redis_generic_create.cpp  sai_redis_generic_get.cpp  sai_redis_generic_remove.cpp  sai_redis_generic_set.cpp  sai_redis_generic_stats.cpp  (+23 more)
meta/: AttrKeyMap.cpp  AttrKeyMap.h  DummySaiInterface.cpp  DummySaiInterface.h  Globals.cpp  Globals.h  Makefile.am  Meta.cpp  Meta.h  MetaKeyHasher.cpp  MetaKeyHasher.h  MetaTestSaiInterface.cpp  MetaTestSaiInterface.h  Notification.cpp  Notification.h  NotificationBfdSessionStateChange.cpp  NotificationBfdSessionStateChange.h  NotificationFactory.cpp  NotificationFactory.h  NotificationFdbEvent.cpp  NotificationFdbEvent.h  NotificationNatEvent.cpp  NotificationNatEvent.h  NotificationPortStateChange.cpp  NotificationQueuePfcDeadlock.cpp  NotificationQueuePfcDeadlock.h  NotificationSwitchShutdownRequest.cpp  NotificationSwitchShutdownRequest.h  NotificationSwitchStateChange.cpp  NotificationSwitchStateChange.h  NumberOidIndexGenerator.cpp  NumberOidIndexGenerator.h  OidRefCounter.cpp  OidRefCounter.h  PerformanceIntervalTimer.cpp  PerformanceIntervalTimer.h  PortRelatedSet.cpp  PortRelatedSet.h  RedisSelectableChannel.cpp  RedisSelectableChannel.h  (+22 more)
pyext/py2/: Makefile.am
pyext/py3/: Makefile.am
saiasiccmp/: AsicCmp.cpp  AsicCmp.h  CommandLineOptions.cpp  CommandLineOptions.h  CommandLineOptionsParser.cpp  CommandLineOptionsParser.h  Makefile.am  SaiSwitchAsic.cpp  SaiSwitchAsic.h  View.cpp  View.h  ViewCmp.cpp  ViewCmp.h  dump1.json  dump2.json  dump3.json  main.cpp  test.sh
saidiscovery/: Makefile.am  saidiscovery.cpp
saidump/: Makefile.am  saidump.cpp
saiplayer/: CommandLineOptions.cpp  CommandLineOptions.h  CommandLineOptionsParser.cpp  CommandLineOptionsParser.h  Makefile.am  SaiPlayer.cpp  SaiPlayer.h  saiplayer.cpp  saiplayer_main.cpp
saisdkdump/: Makefile.am  saisdkdump.cpp
syncd/: Asan.cpp  AsicOperation.cpp  AsicOperation.h  AsicView.cpp  AsicView.h  BestCandidateFinder.cpp  BestCandidateFinder.h  BreakConfig.cpp  BreakConfig.h  BreakConfigParser.cpp  BreakConfigParser.h  CommandLineOptions.cpp  CommandLineOptions.h  CommandLineOptionsParser.cpp  CommandLineOptionsParser.h  ComparisonLogic.cpp  ComparisonLogic.h  FlexCounter.cpp  FlexCounter.h  FlexCounterManager.cpp  FlexCounterManager.h  GlobalSwitchId.cpp  GlobalSwitchId.h  HardReiniter.cpp  HardReiniter.h  Makefile.am  MdioIpcServer.cpp  MdioIpcServer.h  MetadataLogger.cpp  MetadataLogger.h  NotificationHandler.cpp  NotificationHandler.h  NotificationHandlerWrapper.cpp  NotificationHandlerWrapper.h  NotificationProcessor.cpp  NotificationProcessor.h  NotificationProducerBase.h  NotificationQueue.cpp  NotificationQueue.h  PortMap.cpp  (+65 more)
syncd/scripts/: gbsyncd_start.sh  (+5 more)
tests/: BCM56850.pl  BCM56971B0.pl  Makefile.am  README.md  aspell.en.pws  aspellcheck.pl  brcm.pl  checkwhitespace.sh  conflictnames.pl  findcrossinclude.sh  swsslogentercheck.pl  testclient.cpp  tests.cpp  utils.pm
vslib/: Buffer.cpp  Context.cpp  Context.h  ContextConfig.cpp  ContextConfig.h  ContextConfigContainer.cpp  CorePortIndexMap.h  CorePortIndexMapFileParser.cpp  CorePortIndexMapFileParser.h  Event.cpp  Event.h  EventPayloadNotification.h  EventPayloadPacket.h  EventQueue.cpp  FdbInfo.cpp  HostInterfaceInfo.h  LaneMap.cpp  LaneMapContainer.cpp  LaneMapContainer.h  LaneMapFileParser.cpp  LaneMapFileParser.h  MACsecAttr.cpp  MACsecAttr.h  MACsecEgressFilter.cpp  MACsecFilter.cpp  MACsecFilter.h  MACsecFilterStateGuard.cpp  MACsecFilterStateGuard.h  MACsecForwarder.cpp  MACsecForwarder.h  MACsecManager.cpp  MACsecManager.h  Makefile.am  NetMsgRegistrar.cpp  NetMsgRegistrar.h  RealObjectIdManager.cpp  RealObjectIdManager.h  ResourceLimiter.cpp  ResourceLimiter.h  ResourceLimiterContainer.cpp  (+74 more)
(+418 files in other folders)
